--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "James Thomas <james@jamesthom.as>"
   ],
   "dependencies": {
-    "openwhisk": "^3.2.1"
+    "openwhisk": "^3.2.1",
+    "os": "0.1.1",
+    "util": "0.10.3",
+    "stream": "0.0.2",
+    "readable-stream": "2.0.6",
+    "duplexer": "0.1.1",
+    "split": "1.0.0",
+    "through": "2.3.8",
+    "dockerode": "2.3.2"
   }
 }
